changed to Japanese

--- a/app/views/artist/songs.html.erb
+++ b/app/views/artist/songs.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="entry"> 
-        <h3 class="h3">Songs of<%= @artist %></h3>
+        <h3 class="h3">[<%= @artist %>] の曲</h3>
         <p><%= link_to '戻る', search_path %> &nbsp&nbsp&nbsp<%= link_to 'Mylist', mylist_path %></p>
 
             <div class="container">
