--- a/app/views/friend/index.html.erb
+++ b/app/views/friend/index.html.erb
@@ -1,4 +1,4 @@
-All other users 
+全 <b class="text-success"><%= @num  %></b> ユーザを表示
 <br>
 <br>
 <div class="container">
@@ -9,7 +9,7 @@ All other users
                     <p class="list-group-item ">
                     <%= link_to other.email.split("@").first, save_following_path(email: other.email), method: :patch %>
                     <br>
-                    <b class="badge badge-success text-white"><%= other.songs.count %></b> songs
+                    <b class="badge badge-success text-white"><%= other.songs.count %></b> 曲
                     <% @count = 0 %>
                     <% other.songs.each do |song| %>
                     
@@ -18,9 +18,9 @@ All other users
                         <% end %>
 
                     <% end %> 
-                    <b class="badge badge-info text-white"><%= @count %></b> common
-                    <b class="badge badge-warning text-white"><%= other.countnum %></b> artists
-                    <b class="badge badge-secondary text-white"><%= other.total %></b> times
+                    <b class="badge badge-info text-white"><%= @count %></b> 曲の共通
+                    <b class="badge badge-warning text-white"><%= other.countnum %></b> アーティスト
+                    <b class="badge badge-secondary text-white"><%= other.total %></b> 回
                     </p>
                 <% end %>
             <% end %>
