--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,13 +18,13 @@
     <%= render 'layouts/navbar' %>
     <% if current_user %>
       <p>
-        &nbsp<%= link_to 'My list', mylist_artist_path, class:" badge badge-warning text-white" %>
-        &nbsp<%= link_to 'Other users', friend_path, class:" badge badge-info text-white" %>
-        &nbsp<%= link_to 'Search', search_path, class:" badge badge-success text-white" %>
+        &nbsp<%= link_to 'マイリスト', mylist_artist_path, class:" badge badge-warning text-white" %>
+        &nbsp<%= link_to '他のユーザー', friend_path, class:" badge badge-info text-white" %>
+        &nbsp<%= link_to '検索', search_path, class:" badge badge-success text-white" %>
         &nbsp <b class="badge badge-secondary text-white" ><%= current_user.email %></b>
         <br>
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;
-        <%= link_to("Logout", destroy_user_session_path, class: "badge badge-danger text-white", method: :delete,)%>
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&nbsp;
+        <%= link_to("ログアウト", destroy_user_session_path, class: "badge badge-danger text-white", method: :delete,)%>
       </p>
     <% end %>
     <div class="container">
