--- a/app/views/search/p.html.erb
+++ b/app/views/search/p.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="entry">
-    <h3 class="h3">「」から始まるアーティスト名</h3>
+    <h3 class="h3">「」から始まる<br>アーティスト名</h3>
     <p><%= link_to '戻る', search_path %></p>
     <div class="outer">
         <ul class="list-group">
