--- a/app/views/search/result.html.erb
+++ b/app/views/search/result.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="entry"> 
-        <h3 class="h3">The result of [ <%= params[:search] %> ]</h3>
+        <h3 class="h3">[ <%= params[:search] %> ]　の検索結果</h3>
         <p> Showing <b class="text-success" ><%= @all - 22  %></b> songs.  </p>
         <p><%= link_to '戻る', search_path %></p>
 
