--- a/app/views/artist/artist.html.erb
+++ b/app/views/artist/artist.html.erb
@@ -7,14 +7,14 @@
                     <div class="col-xs-6">
 
                         <% @contents.each do |content|  %>
-                            <p class="list-group-item"><%= truncate(content.to_s, length: 12) %></p>
+                            <p class="list-group-item"><%= truncate(content.to_s, length: 11) %></p>
                             
                         <% end %>
                     </div>
                     <div class="col-xs-6">
                     
                         <% @links.each do |link|  %>
-                            <p class="source list-group-item"><%= link_to 'Artist', save_link_path(link: link), method: :patch %></p>
+                            <p class="source list-group-item"><%= link_to '曲を見る', save_link_path(link: link), method: :patch %></p>
                         <% end %>
                     
                     </div>
