--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,13 +3,14 @@
     <h1 class="display-4 text-success">Nfret</h1>
     <p class="lead">Ufretは好きだけど月額６５０円は払いたくない人（オレ）に向けて</p>
     <hr class="my-4">
-    <p class="badge badge-info text-white">Total user: <%= User.all.count %><br>
-    Total play times: <%= @totalnum %><br>
-    Total added songs by the users: <%= Song.count %><br></p>
+    <p class="badge badge-info text-white">総ユーザー数: <%= User.all.count %><br>
+    総プレイ回数: <%= @totalnum %><br>
+    ユーザーによって登録された曲: <%= Song.count %><br></p>
+    <br>
     <% if !(current_user)%>
-        <%= link_to "SIGN UP",  new_user_registration_path, class: "btn btn-success btn-lg" %>
+        <%= link_to "登録",  new_user_registration_path, class: "btn btn-success btn-lg" %>
         &nbsp
-        <%= link_to "SIGN IN",  new_user_session_path, class: "btn btn-info btn-lg" %>
+        <%= link_to "ログイン",  new_user_session_path, class: "btn btn-info btn-lg" %>
     <% end %>
   </div>
 </div>
